terraform/infrastructure/modules/networking/public-router-tables.tf
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }

  tags = {
    Name = "bank-accounts-public-rt-${var.environment}",
    Tier = local.tiers.network
  }
}

resource "aws_route_table_association" "route_table_public_subnet_associations" {
  for_each = aws_subnet.public_subnets

  subnet_id      = each.value.id
  route_table_id = aws_route_table.public_route_table.id
}
