terraform/infrastructure/modules/networking/vpc.tf
resource "aws_vpc" "this" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  instance_tenancy     = "default"

  tags = {
    Name = "bank-accounts-vpc-${var.environment}",
    Tier = local.tiers.network
  }
}
